--- a/css/design.css
+++ b/css/design.css
@@ -45,6 +45,17 @@ h2 {
     justify-content: center;
     margin: 1em;
 }
+
+h3 {
+    font-family: "Anton";
+    display: grid;
+}
+
+h4{
+    font-family: "Abel", sans-serif;
+    font-size: 16px;
+}
+
 .buttons {
     font-family: "Anton";
     font-size: 1em;
@@ -85,4 +96,19 @@ h2 {
     background-color: #00ABA9;
     text-align: center;
     border: 7px solid white;
+}
+
+img{
+    max-width: 100%;
+    max-height: 100%;
+}
+
+h5{
+    border-radius: 50%;
+    width: 18px;
+    height: 18px;
+    font-family: "Anton";
+    font-size: 12px;
+    text-align: center;
+    line-height: 18px;
 }
