--- a/css/design.css
+++ b/css/design.css
@@ -15,7 +15,7 @@
 /*}*/
 /*div.tall-row {*/
 /*    height: 300px;*/
-}
+/*}*/
 body {
     background-color: #F0F0F0;
 }
@@ -30,7 +30,7 @@ body {
     font-family: "Abel", sans-serif;
 }
 h1 {
-    font-family: "Anton";
+    font-family: "Anton", sans-serif;
     font-size: 3.9em;
     display: grid;
 
@@ -39,7 +39,7 @@ h1 {
 }
 
 h2 {
-    font-family: "Anton";
+    font-family: "Anton", sans-serif;
     font-size: 2.8em;
     display: grid;
     justify-content: center;
@@ -47,7 +47,7 @@ h2 {
 }
 
 h3 {
-    font-family: "Anton";
+    font-family: "Anton", sans-serif;
     display: grid;
 }
 
@@ -57,7 +57,7 @@ h4{
 }
 
 .buttons {
-    font-family: "Anton";
+    font-family: "Anton", sans-serif;
     font-size: 1em;
     color: white;
 }
@@ -107,7 +107,7 @@ h5{
     border-radius: 50%;
     width: 18px;
     height: 18px;
-    font-family: "Anton";
+    font-family: "Anton", sans-serif;
     font-size: 12px;
     text-align: center;
     line-height: 18px;
